Bug 9379 - SLOB crash, 2.6.24-rc2
Summary: SLOB crash, 2.6.24-rc2
Status: CLOSED CODE_FIX
Alias: None
Product: Memory Management
Classification: Unclassified
Component: Slab Allocator (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Andrew Morton
URL:
Keywords:
Depends on:
Blocks: 9243
  Show dependency tree
 
Reported: 2007-11-14 04:51 UTC by Rafael J. Wysocki
Modified: 2007-11-16 15:39 UTC (History)
2 users (show)

See Also:
Kernel Version: 2.6.24-rc2
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments

Description Rafael J. Wysocki 2007-11-14 04:51:26 UTC
Subject         : SLOB crash, 2.6.24-rc2
Submitter       : Ingo Molnar <mingo@elte.hu>
References      : http://lkml.org/lkml/2007/11/14/108
Comment 1 Ingo Molnar 2007-11-15 02:45:06 UTC
* bugme-daemon@bugzilla.kernel.org <bugme-daemon@bugzilla.kernel.org> wrote:

> http://bugzilla.kernel.org/show_bug.cgi?id=9379
> 
> 
> rjwysocki@sisk.pl changed:
> 
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
>              Status|NEW                         |REJECTED
>          Resolution|                            |UNREPRODUCIBLE

please open this bug again. I twiddled my network config which made the 
bug go away but i expect it to come up again with the old config. (which 
i'll try to restore)

	Ingo
Comment 2 Ingo Molnar 2007-11-15 12:01:37 UTC
* bugme-daemon@bugzilla.kernel.org <bugme-daemon@bugzilla.kernel.org> wrote:

> http://bugzilla.kernel.org/show_bug.cgi?id=9379
> 
> 
> rjwysocki@sisk.pl changed:
> 
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
>              Status|CLOSED                      |REOPENED
>          Resolution|UNREPRODUCIBLE              |

fixed by:

  http://lkml.org/lkml/2007/11/15/205

	Ingo
Comment 3 Rafael J. Wysocki 2007-11-16 15:39:14 UTC
Fixed by:

commit d32ddd8f20e7d7a49c45c337c2079be03c77dc41
Author: Nick Piggin <npiggin@suse.de>
Date:   Thu Nov 15 12:32:04 2007 +0100

    slob: fix memory corruption

http://git.kernel.org/gitweb.cgi?p=linux/kernel/git/torvalds/linux-2.6.git;a=commit;h=d32ddd8f20e7d7a49c45c337c2079be03c77dc41

Note You need to log in before you can comment on or make changes to this bug.